Entry saved by arodriguez@oneparkfinancial.com

--- a/site/content/collections/blog/2019-08-19.how-to-get-a-small-business-loan-part-2.md
+++ b/site/content/collections/blog/2019-08-19.how-to-get-a-small-business-loan-part-2.md
@@ -10,14 +10,14 @@ id: beb77c3e-867e-498b-a55f-abc90d58ac06
 In part one of this series, we looked at the different reasons for getting a small business loan and determined the right time to apply for loans based on what you want to do with the funds and your personal and business credit history. 
 
 In part two, we’ll talk about the different types of loans that a small business can apply for from traditional lenders, specifically a bank or credit union. These include:
-
-	•	Term Loans
-	•	SBA-guaranteed loans
-	•	Lines of Credit
-	•	Equipment loans
-	•	Equipment Leasing
-	•	Personal loans
-
+<ul style="list-style:circle;padding-left:30px;margin-bottom:30px;">
+<li>Term Loans</li>
+<li>SBA-guaranteed loans</li>
+<li>Lines of Credit</li>
+<li>Equipment loans</li>
+<li>Equipment Leasing</li>
+<li>Personal loans</li>
+</ul>
 We’ll also look the requirements for various loan products – such as time in business, credit history and annual revenues. And we’ll detail the advantages and challenges associated with each type of loan.
 
 ### Know Your Options
