Entry saved by arodriguez@oneparkfinancial.com

--- a/site/content/collections/blog/2019-08-19.how-to-get-a-small-business-loan-part-2.md
+++ b/site/content/collections/blog/2019-08-19.how-to-get-a-small-business-loan-part-2.md
@@ -32,49 +32,52 @@ Basic qualifications for a long-term loan are two years in business, a 700+ cred
 
 Long and medium-term loans will often require collateral up to or over the amount of the funds borrowed. The value of your collateral – which is called the loan-to-value ratio – will be calculated by your lender. There are different ways to do this, but in general you would expect to see about 70 percent of the actual value of appraised real estate or 60-80 percent of inventory, cash, or equipment. 
 
-### Advantages: 
-	•	Predictable repayment amount
-	•	Can borrow large sums of money ($1m and up), if qualified
-	•	Lower interest rates than “bad credit” loan products
-
-### Challenges
-	•	Banks may refuse to lend to businesses within specific industries (for example, travel companies, restaurants or consumer financial services)
-	•	Traditional bank loans will rarely be approved if your business opened less than a year ago
-	•	Typically takes at least a month before approval/funds are available
-	•	May require significant collateral
-
-Best for: Businesses with excellent credit histories who want to grow/expand.
-
+### Advantages:
+<ul style="list-style:circle;padding-left:30px;margin-bottom:30px;">
+<li>Predictable repayment amount</li>
+<li>Can borrow large sums of money ($1m and up), if qualified</li>
+<li>Lower interest rates than “bad credit” loan products</li>
+</ul>
+### Challenges:
+<ul style="list-style:circle;padding-left:30px;margin-bottom:30px;">
+<li>Banks may refuse to lend to businesses within specific industries (for example, travel companies, restaurants or consumer financial services)</li>
+<li>Traditional bank loans will rarely be approved if your business opened less than a year ago</li>
+<li>Typically takes at least a month before approval/funds are available</li>
+<li>May require significant collateral</li>
+<li>Businesses with excellent credit histories who want to grow/expand.</li>
+</ul>
 ### SBA-guaranteed loans
 An excellent option if you have a strong credit score, excellent borrowing history, and a lot of time to devote to gathering documentation required to qualify for the loan. 
 SBA loans are not funded by the Small Business Administration (SBA) they are instead guaranteed by the SBA which promises to pay up to 85% of the loan if you default. The loan itself is provided through an SBA-approved lender, almost always a bank or credit union. 
 
 The qualification requirements are strict – the SBA (unsurprisingly) wants to make sure you won’t default. Don’t bother applying unless you have:
-
-	•	At least 2 years in business
-	•	A minimum 640+ credit score (700+ is the sweet spot)
-	•	$100,000+ annual revenue (and potentially proof of profitability)
-
+<ul style="list-style:circle;padding-left:30px;margin-bottom:30px;">
+<li>At least 2 years in business</li>
+<li>A minimum 640+ credit score (700+ is the sweet spot)</li>
+<li>$100,000+ annual revenue (and potentially proof of profitability)</li>
+</ul>
 The SBA has a number of other requirements too, among the most important is that you must have a US-based, for-profit business in an eligible industry. Non-profit businesses aren’t eligible for SBA loans, and non-eligible industries include:
-
-	•	Political or lobbying 
-	•	Lending/loans
-	•	Life insurance
-	•	Gambling
-	•	Speculative businesses (real estate developers, medical research)
-	•	Passive income businesses 
-
+<ul style="list-style:circle;padding-left:30px;margin-bottom:30px;">
+<li>Political or lobbying</li>
+<li>Lending/loans</li>
+<li>Life insurance</li>
+<li>Gambling</li>
+<li>Speculative businesses (real estate developers, medical research)</li>
+<li>Passive income businesses</li>
+</ul>
 For complete details, look at the SBA’s eligibility questionnaire. If you qualify for an SBA loan, you’ll benefit from low interest rates and extended repayment terms (seven years for working capital, 10 years for equipment loans, 25 for real estate purchases).
 
-### Advantages: 
-	•	Low interest rates
-	•	High borrowing amounts (up to $5 million).
-	•	Extended payment terms (seven years for working capital, 10 years for equipment loans) 
-
+### Advantages:
+<ul style="list-style:circle;padding-left:30px;margin-bottom:30px;">
+<li>Low interest rates</li>
+<li>High borrowing amounts (up to $5 million).</li>
+<li>Extended payment terms (seven years for working capital, 10 years for equipment loans)</li>
+</ul>
 ### Challenges
-	•	Demanding approval requirements
-	•	Lengthy application process
-
+<ul style="list-style:circle;padding-left:30px;margin-bottom:30px;">
+<li>Demanding approval requirements</li>
+<li>Lengthy application process</li>
+</ul>
 Best for: Businesses with excellent credit histories who do not immediately need access to funding  and want to make long-term growth investments such as opening a new location, hiring employees or refinancing existing loans.
 
 ## Lines of Credit
@@ -84,74 +87,84 @@ There are two types of credit lines: fixed and revolving. If you get a fixed loa
 
 If you have an excellent credit history you may qualify for an unsecured line of credit. Secured lines of credit are also available, but you will likely need to put down collateral that’s worth at least as much as the loan you hope to secure. 
 
-### Advantages: 
-•	Easy access to working capital
-•	You pay interest only on withdrawn funds
-•	You have an emergency fund 
-
+### Advantages:
+<ul style="list-style:circle;padding-left:30px;margin-bottom:30px;">
+<li>Easy access to working capital</li>
+<li>You pay interest only on withdrawn funds</li>
+<li>You have an emergency fund</li> 
+</ul>
 ### Challenges:
-	•	Can be difficult to qualify for – same requirements as a traditional bank term loan
-	•	May require significant collateral
-
+<ul style="list-style:circle;padding-left:30px;margin-bottom:30px;">
+<li>Can be difficult to qualify for – same requirements as a traditional bank term loan</li>
+<li>May require significant collateral</li>
+</ul>
 Best For:  Businesses with excellent credit histories who want working capital to cover unexpected expenses or operating expenses during slow business cycles. 
 
 ## CAPLines Lines of Credit
 
 CAPLines is an SBA loan program that enables business owners  with excellent credit histories to access business lines of credit to use as working capital and to help manage business cycle cash flow gaps. There are four CAPLines programs
-
-	•	Seasonal CAPLines are used to finance seasonal increases of accounts receivable and inventory (or in some cases associated increased labor costs). Funds must not be used to cover slow-cycle cash flow gaps.
-	•	Contract CAPLines are used to finance the costs of fulfilling specific contracts, including overhead or general and administrative expenses. 
-	•	Builder’s CAPLines are used to fund direct expenses related to the construction and/or “substantial” (more than one-third of the purchase price or fair market value) renovation costs of a specific eligible project (residential or commercial buildings for resale).
-	•	Working Capital CAPLines must be used for short term working capital/operating needs. 
-
+<ul style="list-style:circle;padding-left:30px;margin-bottom:30px;">
+<li>Seasonal CAPLines are used to finance seasonal increases of accounts receivable and inventory (or in some cases associated increased labor costs)</li>
+<li>Funds must not be used to cover slow-cycle cash flow gaps.</li>
+<li>Contract CAPLines are used to finance the costs of fulfilling specific contracts, including overhead or general and administrative expenses.</li> 
+<li>Builder’s CAPLines are used to fund direct expenses related to the construction and/or “substantial” (more than one-third of the purchase price or fair market value) renovation costs of a specific eligible project (residential or commercial buildings for resale).</li>
+<li>Working Capital CAPLines must be used for short term working capital/operating needs.</li> 
+</ul>
 CAPLines offer up to $5 million in funding , and the maximum term on a CAPLines line of credit is 10 years. View the regulations for 
 
 CAPLines here. To qualify for a CAPLines loan you’ll need:
-
-	•	At least 2 years in business
-	•	A minimum 640+ credit score (700+ is the sweet spot)
-	•	$100,000+ annual revenue
-	•	Proof of profitability
-	•	Proof of ability to fulfill the contract (for some types of CAPLines)
-
-### Advantages: 
-	•	Excellent opportunity for specific types of small businesses (construction, contractors, etc.) to get financing 
-	•	Low interest rates
-	•	High borrowing amounts (up to $5 million).
-	•	Extended payment terms (up to 10 years) 
-
+<ul style="list-style:circle;padding-left:30px;margin-bottom:30px;">
+<li>At least 2 years in business</li>
+<li>A minimum 640+ credit score (700+ is the sweet spot)</li>
+<li>$100,000+ annual revenue</li>
+<li>Proof of profitability</li>
+<li>Proof of ability to fulfill the contract (for some types of CAPLines)</li>
+</ul>
+### Advantages:
+<ul style="list-style:circle;padding-left:30px;margin-bottom:30px;">
+<li>Excellent opportunity for specific types of small businesses (construction, contractors, etc.) to get financing</li> 
+<li>Low interest rates</li>
+<li>High borrowing amounts (up to $5 million).</li>
+<li>Extended payment terms (up to 10 years)</li> 
+</ul>
 ### Challenges
-	•	Demanding approval requirements
-	•	Strict limits on what funds can and cannot be used for
-	•	Lengthy application process
-
+<ul style="list-style:circle;padding-left:30px;margin-bottom:30px;">
+<li>Demanding approval requirements</li>
+<li>Strict limits on what funds can and cannot be used for</li>
+<li>Lengthy application process</li>
+</ul>
 ## Equipment loans
 
 Equipment loans, as you may expect, enable you to purchase computers, vehicles or machinery or other equipment needed by your business. These loans can cover up to 100% of the value of business equipment. And the equipment itself is the collateral for the loan, making this a good option for business owners who have substantial equipment assets but imperfect credit ratings. The interest you pay will be determined by the value of the equipment and your credit history, as well as the funding source. Equipment loans may require a down payment of about 20%. 
 
 ### Advantages
-	•	Typically, easier approval than a term loan
-	•	Potential tax incentives, depreciation deduction
-	•	Build equity in equipment
-
+<ul style="list-style:circle;padding-left:30px;margin-bottom:30px;">
+<li>Typically, easier approval than a term loan</li>
+<li>Potential tax incentives, depreciation deduction</li>
+<li>Build equity in equipment</li>
+</ul>
 ### Challenges:
-	•	You may have to make a down payment
-	•	Equipment may be outdated before you pay off the loan
-
+<ul style="list-style:circle;padding-left:30px;margin-bottom:30px;">
+<li>You may have to make a down payment</li>
+<li>Equipment may be outdated before you pay off the loan</li>
+</ul>
 Best for businesses with good credit histories that prefer to own, rather than lease, equipment.
 
 ## Equipment Leasing
 This option enables you to obtain business equipment with minimal initial expenditures. You probably won’t need to make a down payment and can usually negotiate the terms of the lease to be more favorable than the terms of an equipment loan. And leasing typically enables you to upgrade equipment more easily than you can with an equipment loan. Leases are easier to qualify for than loans, since the equipment serves as collateral for the payments. But with the convivence comes increased costs, and – since you are obligated to make payments for the entire lease period, you need to ask the lessee what happens when you have problems with equipment under lease that is no longer covered by a warranty. 
 
 ### Advantages
-	•	Lease payments may qualify as a deductible business expense
-	•	Easier approval than a loan
-	•	No worries about ending up with obsolete equipment
-
+<ul style="list-style:circle;padding-left:30px;margin-bottom:30px;">
+<li>Lease payments may qualify as a deductible business expense</li>
+<li>Easier approval than a loan</li>
+<li>No worries about ending up with obsolete equipment</li>
+</ul>
 ### Challenges:
-	•	Leasing is typically significantly more expensive than purchasing
-	•	You don't build equity in the equipment. 
-	•	You are obligated to make payments for the entire lease period
+<ul style="list-style:circle;padding-left:30px;margin-bottom:30px;">
+<li>Leasing is typically significantly more expensive than purchasing</li>
+<li>You don't build equity in the equipment.</li> 
+<li>You are obligated to make payments for the entire lease period</li>
+</ul>
 Best for companies who don’t want or can’t afford to make big initial investments in equipment, and don’t mind paying more for the equipment.
 
 ## Personal loans
@@ -159,12 +172,14 @@ Best for companies who don’t want or can’t afford to make big initial invest
 If you’re a small business owner with a great credit history, you may want to apply for a personal loan to fund your business. Since banks rarely approve loans for startups and small businesses, a personal loan may be your only option if you want to work only with traditional lenders.
 
 ### Advantages
-•	You won’t need to submit a detailed business plan
-
+<ul style="list-style:circle;padding-left:30px;margin-bottom:30px;">
+<li>You won’t need to submit a detailed business plan</li>
+</ul>
 ### Challenges:
-	•	Damage to your personal credit if you can’t repay
-	•	Personal loans typically are for lower amounts than business loan
-
+<ul style="list-style:circle;padding-left:30px;margin-bottom:30px;">
+<li>Damage to your personal credit if you can’t repay</li>
+<li>Personal loans typically are for lower amounts than business loan</li>
+</ul>
 Best for new businesses with excellent personal credit.
 
 ## What to do if you don’t qualify for a bank loan
