Entry saved by arodriguez@oneparkfinancial.com

--- a/site/content/collections/blog/2019-08-19.how-to-get-a-business-loan.md
+++ b/site/content/collections/blog/2019-08-19.how-to-get-a-business-loan.md
@@ -1,5 +1,5 @@
 ---
-title: 'How To Get A Business Loan: Part 1 of 4'
+title: 'How To Get A Small Business Loan: Part 1 of 4'
 meta_title: 'How To Get A Business Loan Today?'
 meta_description: 'What’s the perfect time to apply for a small business loan? There isn’t an easy answer or quick solution. But the right time is dependent on how you intend to use the funding and how quickly you need it.'
 canonical: 'https://www.oneparkfinancial.com/blog/how-to-get-a-business-loan'
