Entry saved by arodriguez@oneparkfinancial.com

--- a/site/content/collections/blog/2019-08-19.how-to-get-a-small-business-loan-part-2.md
+++ b/site/content/collections/blog/2019-08-19.how-to-get-a-small-business-loan-part-2.md
@@ -5,7 +5,7 @@ meta_description: 'In part two, we’ll talk about the different types of loans 
 image: /assets/img/406755-1-what-is-the-best-way-to-pay-yourself-as-a-business-owner.jpg
 id: beb77c3e-867e-498b-a55f-abc90d58ac06
 ---
-## What You Need to Know About Bank Loans for Your Small Business
+# What You Need to Know About Bank Loans for Your Small Business
 
 In part one of this series, we looked at the different reasons for getting a small business loan and determined the right time to apply for loans based on what you want to do with the funds and your personal and business credit history. 
 
