--- a/site/content/collections/blog/2019-08-19.how-to-get-a-business-loan.md
+++ b/site/content/collections/blog/2019-08-19.how-to-get-a-business-loan.md
@@ -19,24 +19,26 @@ What’s the perfect time to apply for a loan? There isn’t any hard and fast r
 
 You’ve got a great idea for a business; you’ve done your research and you know there’s a need for your services or goods (and the market isn’t oversaturated with other businesses filling that need). You’ve created a business plan, and you’re ready to go – but you need funding.
 
-To figure out the best time to apply for a start-up loan consider your personal credit score. If your business has no financial track record your score will be used to gauge whether a bank can risk approving your loan. If you have an excellent credit history, and your business has already been open for about six months, you can apply for a loan through your bank or credit union. But even with a perfect credit history, your loan needs may not be big enough for a bank to bother with. If you get turned down you may want to look into SBA-guaranteed loans. What happens with an SBA-guaranteed loan is that the Small Business Administration promises to pay back a large portion of your loan to your lender if you default. Obviously, the SBA is not interested in guaranteeing loans for people with less-than-perfect credit scores. 
+To figure out the best time to apply for a start-up loan consider your personal credit score. If your business has no financial track record your score will be used to gauge whether a bank can risk approving your loan. If you have an excellent credit history, and your business has already been open for about six months, you can apply for a loan through your bank or credit union. But even with a perfect credit history, your loan needs may not be big enough for a bank to bother with. If you get turned down you may want to look into [SBA-guaranteed loans](https://www.sba.gov/funding-programs/loans). What happens with an SBA-guaranteed loan is that the Small Business Administration promises to pay back a large portion of your loan to your lender if you default. Obviously, the SBA is not interested in guaranteeing loans for people with less-than-perfect credit scores. 
 
 If you haven’t opened your business yet or have been in business less than 6 months and your personal credit history isn’t excellent, you may have an easier time getting funding from alternative sources. You can investigate microloans, business credit cards, or even a personal loan. You can explore grants that are available to you – perhaps you’re a veteran, or your business offers services/goods that your local community needs to flourish, or you meet other specific criteria. 
 
-Your eligibility for more alternative startup business loans like grants, crowdfunding, or friends and family will depend less on your credit score and more on the details of your business—like what your business model is, who your customers are, what community you operate in, and so on. Try googling for “grants for xxxx” with xxx being a specific descriptor of you and/or your business and location – e.g.: “grants for technology startups in xxx city.” And, by the way, if you are involved in technology or science, you can also explore federal loan programs like STTR. 
+Your eligibility for more alternative startup business loans like grants, crowdfunding, or friends and family will depend less on your credit score and more on the details of your business—like what your business model is, who your customers are, what community you operate in, and so on. Try googling for “grants for xxxx” with xxx being a specific descriptor of you and/or your business and location – e.g.: “grants for technology startups in xxx city.” And, by the way, if you are involved in technology or science, you can also explore federal loan programs like [STTR](https://www.sbir.gov/about/about-sttr). 
 
 Another excellent option for early-stage funding are alternative funders, which tend to be more focused on the future profit potentials of your business as opposed to your past credit history. Alternative funding is typically more open to risk, and – once approved – you often can access the funding faster – in days rather than the month or more that it takes to access funds from a traditional bank loan.
 
 ## To take advantage of a new business opportunity
 
-There’s a centuries-old saying, “Opportunity knocks but once.” But when time is of the essence, how do you secure the funds you need to take advantage of a fortunate circumstance? Bank loans take weeks to process.
+There’s a centuries-old [saying](https://www.phrases.org.uk/bulletin_board/10/messages/1005.html), “Opportunity knocks but once.” But when time is of the essence, how do you secure the funds you need to take advantage of a fortunate circumstance? Bank loans take weeks to process.
 
 The right time to financially prepare for a sudden opportunity is now. Think about establishing a business credit line that you can draw from when needed. But, if like many small business owners, you don’t qualify for a credit line that would enable you to do much of anything, you still have options. Look into alternative funding sources, which typically have a streamlined qualification process – you can have the money in your account within 72 business hours. And once you’ve found a funding partner that you like working with, it’s a good idea to establish a business relationship with them. That makes it easier for you to return for additional funding when the next opportunities present themselves.
 
-One word of caution though, don’t let a perceived need for speed force you into a rushed decision. Take the time to carefully consider the opportunity and make sure that its as promising as it seems to be. Scammers rely on people’s sense of urgency to push through deals that might not look so good in a day or two. Question anything that requires you to sign now, pay immediately, etc. Take a little time to think it through. You can always offer to put down a deposit or otherwise show financial good faith if its truly a once-in-a-lifetime opportunity, but you need a little bit of time to make sure the deal is as good as it seems to be. 
-To increase working capital
+One word of caution though, don’t let a perceived need for speed force you into a rushed decision. Take the time to carefully consider the opportunity and make sure that its as promising as it seems to be. Scammers rely on people’s sense of urgency to push through deals that might not look so good in a day or two. Question anything that requires you to sign now, pay immediately, etc. Take a little time to think it through. You can always offer to put down a deposit or otherwise show financial good faith if its truly a once-in-a-lifetime opportunity, but you need a little bit of time to make sure the deal is as good as it seems to be.
 
-Small business owners don’t always pay enough attention to working capital. But low working capital is like living paycheck to paycheck. It’s stressful, it limits your options and it can eventually result in a financial disaster that puts you out of business. Working capital is a safety cushion that helps to ensure you can keep your business up and running even if you hit a slow period or have a small disaster that requires time to recover from. 
+## To increase working capital
+
+Small business owners don’t always pay enough attention to working capital. But low working capital is like living paycheck to paycheck. It’s stressful, it limits your options and it can eventually result in a financial disaster that puts you out of business. Working capital is a safety cushion that helps to ensure you can keep your business up and running even if you hit a slow period or have a small disaster that requires time to recover from.
+
 But the most critical advantage of working capital is that it supports you during a period of growth. Did you know that success can ruin a business? It’s true – if your business starts growing you need to be able to meet demand. Filling new orders or taking care of new clients may cause your accounts receivable to increase as quickly – or even faster – than your revenues increase. Eventually the receivables should grow faster than payables but right now you have a gap that needs to be filled with additional working capital. 
 
 One option to explore when you are juggling accounts payable and receivables during a growth period is invoice financing/factoring. Typically when you’re in a growth pattern, your payables are due sooner than your accounts receivable remittances. You can accelerate your access to the money that is owed to you with an invoice factoring or financing offer. Basically, you get an almost-immediate advance on the money you’re waiting for your customers to pay. At a set later date, you pay your funder the money that was advanced to you, along with the agreed-on fees and interest. In some cases, you transfer the invoices to a funder for a payment that is less that the total of the invoices, and the funder then collects the full amount due from the companies that owed you the money.
@@ -58,7 +60,7 @@ Qualifying for funding intended to be used to purchase equipment or inventory is
 
 Many businesses are seasonal, and you can predict when your business is likely to be slow either from your own experience or the knowledge of others in your industry or local community to prepare for reduced revenues.  But sometimes you don’t have enough assets to get through a slow period, or you may experience an unexpected slowdown due to external events like a natural disaster or other situations – like street construction that makes it hard for customers to access your storefront - that temporarily impact your business. You know that business will likely improve in the near future, but you need to pay your bills until it does.
 
-One funding solution that makes sense for slow business cycles are merchant cash advances. These are not loans; they are an actual advance on your business’s future income. Approval for this type of funding is based on your average recent revenues, so don’t wait until the very last mind to apply. 
+One funding solution that makes sense for slow business cycles are [merchant cash advances](https://www.oneparkfinancial.com/blog/understanding-a-merchant-cash-advance). These are not loans; they are an actual advance on your business’s future income. Approval for this type of funding is based on your average recent revenues, so don’t wait until the very last mind to apply. 
 
 Soon after you’re approved and accept an offer, a funding company deposits a lump sum amount in your business account. This sum is an advance on your future revenues. It’s repaid through automatic deductions of a set percentage of your receipts, with are withdrawn from your business account. And since you are repaying a set percentage of the day’s actual receipts, what you owe aligns perfectly with your business cash flow. You’ll pay less during slow periods, and you’ll catch up by paying more during high-volume times. Traditional loans with fixed payment rates may be difficult to pay during slower business cycles.
 
@@ -66,6 +68,6 @@ Soon after you’re approved and accept an offer, a funding company deposits a l
 
 It’s typically easier and faster for small businesses to work with alternative funding sources, especially if the small business’ owner doesn’t have perfect personal credit history. Also, alternative funders offer options that are designed for small businesses, and you will typically be able to access funds within days instead of the weeks associated with traditional small business loans. 
 
-But how do you get started? One Park Financial works to help owners of small and mid-sized businesses access the funding that meets their needs. Established in 2010 and founded by entrepreneurs, One Park Financial understands the challenges associated with small business loans and their need for working capital. Visit oneparkfinancial.com or call 855.218.8819 and connect with a funding expert to discover the options that make sense for you and your business.
+But how do you get started? One Park Financial works to [help owners of small and mid-sized businesses](https://www.oneparkfinancial.com/pre-qualification) access the funding that meets their needs. Established in 2010 and founded by entrepreneurs, One Park Financial understands the challenges associated with small business loans and their need for working capital. Visit [oneparkfinancial.com](https://www.oneparkfinancial.com/) or call 855.218.8819 and connect with a funding expert to discover the options that make sense for you and your business.
 
-Part two in this series will detail What You Need to Know Now About Bank Loans for Your Small Business
+[Part two](https://www.oneparkfinancial.com/blog/how-to-get-a-small-business-loan-part-2) in this series will detail What You Need to Know Now About Bank Loans for Your Small Business
