Entry saved by arodriguez@oneparkfinancial.com

--- a/site/content/collections/blog/2019-08-19.how-to-get-a-small-business-loan-part-2.md
+++ b/site/content/collections/blog/2019-08-19.how-to-get-a-small-business-loan-part-2.md
@@ -2,7 +2,9 @@
 title: 'How To Get A Small Business Loan: Part 2 of 4'
 meta_title: 'How To Get A Business Loan: Part 2 of 4'
 meta_description: 'In part two, we’ll talk about the different types of loans that a small business can apply for from traditional lenders, specifically a bank or credit union and the alternative options available to your business.'
+canonical: 'https://www.oneparkfinancial.com/blog/how-to-get-a-small-business-loan-part-2'
 image: /assets/img/406755-1-what-is-the-best-way-to-pay-yourself-as-a-business-owner.jpg
+en_url: 'https://www.oneparkfinancial.com/blog/how-to-get-a-small-business-loan-part-2'
 id: beb77c3e-867e-498b-a55f-abc90d58ac06
 ---
 # What You Need to Know About Bank Loans for Your Small Business
@@ -65,7 +67,7 @@ The SBA has a number of other requirements too, among the most important is that
 <li>Speculative businesses (real estate developers, medical research)</li>
 <li>Passive income businesses</li>
 </ul>
-For complete details, look at the SBA’s eligibility questionnaire. If you qualify for an SBA loan, you’ll benefit from low interest rates and extended repayment terms (seven years for working capital, 10 years for equipment loans, 25 for real estate purchases).
+For complete details, look at the [SBA’s eligibility questionnaire. ](https://www.sba.gov/sites/default/files/bank_eligibility_questionnaire_0.pdf)If you qualify for an SBA loan, you’ll benefit from low interest rates and extended repayment terms (seven years for working capital, 10 years for equipment loans, 25 for real estate purchases).
 
 ### Advantages:
 <ul style="list-style:circle;padding-left:30px;margin-bottom:30px;">
@@ -85,7 +87,8 @@ A line of credit gives your business a cash cushion, since you have pre-approved
 
 There are two types of credit lines: fixed and revolving. If you get a fixed loan, you have one-time access to the funds. With a revolving line of credit, you pay your balance and the amount resets. 
 
-If you have an excellent credit history you may qualify for an unsecured line of credit. Secured lines of credit are also available, but you will likely need to put down collateral that’s worth at least as much as the loan you hope to secure. 
+If you have an excellent credit history you may qualify for an unsecured line of credit. Secured lines of credit are also 
+available, but you will likely need to put down collateral that’s worth at least as much as the loan you hope to secure. 
 
 ### Advantages:
 <ul style="list-style:circle;padding-left:30px;margin-bottom:30px;">
@@ -110,7 +113,7 @@ CAPLines is an SBA loan program that enables business owners  with excellent cre
 <li>Builder’s CAPLines are used to fund direct expenses related to the construction and/or “substantial” (more than one-third of the purchase price or fair market value) renovation costs of a specific eligible project (residential or commercial buildings for resale).</li>
 <li>Working Capital CAPLines must be used for short term working capital/operating needs.</li> 
 </ul>
-CAPLines offer up to $5 million in funding , and the maximum term on a CAPLines line of credit is 10 years. View the regulations for 
+CAPLines offer up to $5 million in funding , and the maximum term on a CAPLines line of credit is 10 years. View the [regulations](https://www.sba.gov/sites/default/files/oed_files/CAPLines.pdf) for 
 
 CAPLines here. To qualify for a CAPLines loan you’ll need:
 <ul style="list-style:circle;padding-left:30px;margin-bottom:30px;">
@@ -186,6 +189,6 @@ Best for new businesses with excellent personal credit.
 
 It’s difficult for small businesses to get big banks to approve a loan. Thankfully, there are alternative lenders who offer funding products specifically designed to meet small business needs. In fact there are so many alternative options that we’re devoting part three of this series to alternative lenders and the types of funding that they offer. 
 
-But if you don’t want to wait, the easiest way to find an alternative lender is to get pre-approved by One Park Financial, which then gives you access to a funding expert who can discuss your business needs and options to determine what funding types best meet your needs.
+But if you don’t want to wait, the easiest way to [find an alternative lender](https://www.oneparkfinancial.com/pre-qualification) is to get pre-approved by One Park Financial, which then gives you access to a funding expert who can discuss your business needs and options to determine what funding types best meet your needs.
 
-One Park Financial works to help owners of small and mid-sized businesses access the funding that meets their needs. Established in 2010 and founded by entrepreneurs, One Park Financial understands the challenges associated with small business loans and their need for working capital. Visit oneparkfinancial.com or call 855.218.8819 and connect with a funding expert to discover the options that make sense for you and your business.
+[One Park Financial](https://www.oneparkfinancial.com) works to help owners of small and mid-sized businesses access the funding that meets their needs. Established in 2010 and founded by entrepreneurs, One Park Financial understands the challenges associated with small business loans and their need for working capital. Visit oneparkfinancial.com or call 855.218.8819 and connect with a funding expert to discover the options that make sense for you and your business.
