Entry saved by arodriguez@oneparkfinancial.com

--- a/site/content/collections/blog/2019-08-19.how-to-get-a-small-business-loan-part-2.md
+++ b/site/content/collections/blog/2019-08-19.how-to-get-a-small-business-loan-part-2.md
@@ -113,9 +113,7 @@ CAPLines is an SBA loan program that enables business owners  with excellent cre
 <li>Builder’s CAPLines are used to fund direct expenses related to the construction and/or “substantial” (more than one-third of the purchase price or fair market value) renovation costs of a specific eligible project (residential or commercial buildings for resale).</li>
 <li>Working Capital CAPLines must be used for short term working capital/operating needs.</li> 
 </ul>
-CAPLines offer up to $5 million in funding , and the maximum term on a CAPLines line of credit is 10 years. View the [regulations](https://www.sba.gov/sites/default/files/oed_files/CAPLines.pdf) for 
-
-CAPLines here. To qualify for a CAPLines loan you’ll need:
+CAPLines offer up to $5 million in funding , and the maximum term on a CAPLines line of credit is 10 years. View the [regulations](https://www.sba.gov/sites/default/files/oed_files/CAPLines.pdf) for CAPLines here. To qualify for a CAPLines loan you’ll need:
 <ul style="list-style:circle;padding-left:30px;margin-bottom:30px;">
 <li>At least 2 years in business</li>
 <li>A minimum 640+ credit score (700+ is the sweet spot)</li>
